created html routes for majority of the homepage

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -31,10 +31,10 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <button type="button" class="btn btn-secondary">Top Rated Books</button>
+                <button type="button" href="/top-rated" class="btn btn-secondary">Top Rated Books</button>
             </div>
             <div class="col-sm-6">
-                <button type="button" class="btn btn-secondary">Rate a book</button>
+                <button type="button" href="/rate" class="btn btn-secondary">Rate a book</button>
             </div>
         </div>
     </div>
