--- a/public/login.html
+++ b/public/login.html
@@ -53,7 +53,7 @@
 			<form action="auth" method="POST">
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
-				<input type="submit">
+				<input type="submit" href="/">
 			</form>
 		</div>
 	</body>
