swithced all html to handlebars and created intitial setup of html routes

--- a/public/submit.html
+++ b/public/submit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +20,7 @@
         <li class="nav-item">
             <a class="nav-link active" href="#">Add a book</a>
         </li>
-    </nav>
+    </nav> -->
 
     <div class="container">
         <form>
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </form>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" id="addBook">Submit</button>
     </div>
 
 </body>
